stderr
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
Hiker.kt:11:54: error: expecting ')
                                        if(index!== 0 & index % 2 == 0){
                                                     ^
Hiker.kt:11:55: error: expecting an expression
                                        if(index!== 0 & index % 2 == 0){
                                                      ^
Hiker.kt:11:55: error: unexpected tokens (use ';' to separate expressions on the same line)
                                        if(index!== 0 & index % 2 == 0){
                                                      ^
Hiker.kt:18:54: error: expecting ')
                                        if(index!== 0 & index % 3 == 1){
                                                     ^
Hiker.kt:18:55: error: expecting an expression
                                        if(index!== 0 & index % 3 == 1){
                                                      ^
Hiker.kt:18:55: error: unexpected tokens (use ';' to separate expressions on the same line)
                                        if(index!== 0 & index % 3 == 1){
                                                      ^
